--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,38 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(mara_moveit_config)
 
-find_package(catkin REQUIRED COMPONENTS
-  moveit_core
-  pluginlib
-  roscpp
-  tf_conversions
-)
+find_package(catkin REQUIRED)
 
-include_directories(${catkin_INCLUDE_DIRS})
+catkin_package()
 
-catkin_package(
-  LIBRARIES
-  CATKIN_DEPENDS
-    moveit_core
-    pluginlib
-    roscpp
-    tf_conversions
-)
-
-include_directories(include)
-
-set(IKFAST_LIBRARY_NAME mara_left_arm_moveit_ikfast_plugin)
-
-find_package(LAPACK REQUIRED)
-
-add_library(${IKFAST_LIBRARY_NAME} src/mara_left_arm_ikfast_moveit_plugin.cpp)
-target_link_libraries(${IKFAST_LIBRARY_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
-
-install(TARGETS ${IKFAST_LIBRARY_NAME} LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
-
-install(
-  FILES
-  mara_left_arm_moveit_ikfast_plugin_description.xml
-  DESTINATION
-  ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  PATTERN "setup_assistant.launch" EXCLUDE)
+install(DIRECTORY config DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
